# dicom-rs

./: .gitignore  .rustfmt.toml  .rustfmt_nightly.toml  .travis.yml  CHAT_LOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  dump.txt  justfile
app-common/: Cargo.toml  README.md
app-common/src/: lib.rs
core/: .gitignore  Cargo.toml  README.md
core/examples/: dcmdump.rs
core/fuzz/: Cargo.toml
core/fuzz/fuzz_targets/: value_parse.rs
core/src/: error.rs  file.rs  header.rs  iterator.rs  lib.rs  loader.rs  meta.rs  object.rs  ops.rs  parser.rs  prelude.rs  transfer_syntax.rs  util.rs  value.rs
core/src/attribute/: mod.rs  tag.rs  value.rs
core/src/attribute/dictionary/: mod.rs  stub.rs
core/src/data/: codec.rs  dataset.rs  iterator.rs  mod.rs  parser.rs  text.rs  value.rs
core/src/data_element/: encode.rs  explicit_be.rs  explicit_le.rs  implicit_le.rs  mod.rs  text.rs
core/src/dictionary/: data_element.rs  mod.rs  stub.rs  uid.rs
core/src/object/: lazy.rs  mem.rs  mod.rs  pixeldata.rs
core/src/transfer_syntax/: codec.rs  explicit_be.rs  explicit_le.rs  implicit_le.rs  mod.rs
core/src/value/: deserialize.rs  fragments.rs  mod.rs  partial.rs  person_name.rs  primitive.rs  range.rs  serialize.rs
core/tests/: dicom_value.rs  using_prelude.rs
dcmdump/: Cargo.toml  README.md
dcmdump/src/: dump.rs  lib.rs  main.rs
devtools/dictionary-builder/: .gitignore  Cargo.toml  README.md
devtools/dictionary-builder/src/: common.rs  main.rs  sop.rs  tags.rs  uids.rs
devtools/dimse-message-builder/: Cargo.toml  README.md
devtools/dimse-message-builder/src/: main.rs
dictionary-builder/: .gitignore  Cargo.toml  README.md  main.rs
dictionary-builder/src/: data_dict.rs  main.rs  uid_dict.rs
dictionary-std/: Cargo.toml  README.md
dictionary-std/src/: data_element.rs  entries.rs  lib.rs  sop_class.rs  tags.rs  uids.rs
dictionary_builder/: Cargo.toml  README.md  main.rs
dump/: Cargo.toml  README.md
dump/src/: lib.rs  main.rs
echoscu/: Cargo.toml  README.md
echoscu/src/: main.rs
encoding/: Cargo.toml  README.md
encoding/src/: adapters.rs  error.rs  lib.rs  ops.rs  text.rs
encoding/src/adapters/: jpeg.rs  mod.rs  rle_lossless.rs
encoding/src/decode/: adaptive_le.rs  basic.rs  erased.rs  explicit_be.rs  explicit_le.rs  implicit_le.rs  mod.rs  primitive_value.rs
encoding/src/encode/: basic.rs  explicit_be.rs  explicit_le.rs  implicit_le.rs  mod.rs  primitive_value.rs
encoding/src/transfer_syntax/: explicit_be.rs  explicit_le.rs  implicit_le.rs  mod.rs
findscu/: Cargo.toml  README.md
findscu/src/: main.rs  query.rs
fromimage/: Cargo.toml  README.md
fromimage/src/: main.rs
json/: Cargo.toml  README.md
json/fuzz/: Cargo.toml
json/fuzz/fuzz_targets/: json_roundtrip.rs
json/src/: lib.rs
json/src/de/: mod.rs  value.rs
json/src/ser/: mod.rs  value.rs
object/: Cargo.toml  README.md
object/examples/: dcmdump.rs
object/fuzz/: Cargo.toml  fuzz.sh
object/fuzz/fuzz_targets/: open_file.rs
object/src/: attribute.rs  collector.rs  dicomdir.rs  file.rs  lazy.rs  lib.rs  loader.rs  mem.rs  meta.rs  ops.rs  pixeldata.rs  tokens.rs  util.rs
object/src/lazy/: element.rs  mod.rs  record.rs
object/tests/: integration_test.rs
parent/: Cargo.toml  README.md
parent/src/: lib.rs
parser/: Cargo.toml  README.md
parser/fuzz/: Cargo.toml
parser/fuzz/fuzz_targets/: dataset_tokens.rs  lazy_dataset_tokens.rs
parser/src/: dataset.rs  error.rs  lib.rs  marker.rs  parser.rs  primitive_value.rs  printer.rs  text.rs  util.rs
parser/src/dataset/: lazy_read.rs  mod.rs  read.rs  write.rs
parser/src/decode/: basic.rs  erased.rs  mod.rs
parser/src/encode/: basic.rs  mod.rs
parser/src/stateful/: decode.rs  encode.rs  mod.rs
parser/src/transfer_syntax/: codec.rs  explicit_be.rs  explicit_le.rs  implicit_le.rs  mod.rs  registry.rs
pixeldata/: Cargo.toml  README.md
pixeldata/fuzz/: Cargo.toml  fuzz.sh
pixeldata/fuzz/fuzz_targets/: decode_image_file.rs  decode_simple_image.rs
pixeldata/src/: attribute.rs  encapsulation.rs  encaspulation.rs  gdcm.rs  lib.rs  lut.rs  transcode.rs  transform.rs
pixeldata/tests/: image_reader.rs  integration_tests.rs
scpproxy/: Cargo.toml  README.md
scpproxy/src/: main.rs
storescp/: Cargo.toml  README.md
storescp/src/: main.rs  store_async.rs  store_sync.rs  transfer.rs
storescu/: Cargo.toml  README.md
storescu/src/: main.rs  store_async.rs  store_sync.rs
toimage/: Cargo.toml  README.md
toimage/src/: main.rs
transfer-syntax-registry/: Cargo.toml  README.md
transfer-syntax-registry/src/: deflate.rs  entries.rs  lib.rs
transfer-syntax-registry/src/adapters/: deflated.rs  encapsulated.rs  jpeg.rs  jpeg2k.rs  jpegls.rs  jpegxl.rs  mod.rs  rle_lossless.rs  uncompressed.rs
transfer-syntax-registry/tests/: base.rs  deflate.rs  deflated_frame.rs  jpeg.rs  jpeg2k.rs  jpegls.rs  jpegxl.rs  main.rs  rle.rs  submit.rs  submit_dataset.rs  submit_pixel.rs  submit_pixel_stub.rs  submit_replace.rs  submit_replace_precondition.rs
transfer-syntax-registry/tests/adapters/: mod.rs
ul/: Cargo.toml  README.md  generated_command_structs.py  test.json
ul/assets/: ca.srl  client.csr  generate_certs.sh  server.cnf  server.csr
ul/certs/: ca.key.pem  ca.pem  client.key.pem  client.pem  full.pem  server.key.pem  server.pem
ul/fuzz/: Cargo.toml  fuzz.sh
ul/fuzz/fuzz_targets/: pdu_roundtrip.rs
ul/scripts/: README.md  generate_command_structs.py  pyproject.toml
ul/src/: address.rs  error.rs  lib.rs  prelude.rs
ul/src/association/: client.rs  mod.rs  pdata.rs  scp.rs  scu.rs  server.rs  tests.rs  uid.rs
ul/src/pdu/: commands.rs  generated.rs  mod.rs  reader.rs  reader_nonblocking.rs  test.rs  writer.rs  writer_nonblocking.rs
ul/tests/: association.rs  association_echo.rs  association_promiscuous.rs  association_store.rs  association_store_pdata.rs  association_store_uncompressed.rs  association_tls.rs  pdata.rs  pdu.rs  test.rs
web/: Cargo.toml
web/src/: decode.rs  lib.rs  main.rs  qido.rs  utils.rs  wado.rs
(+24 files in other folders)
