[workspace]
members = [
    "parent",
    "core",
    "encoding",
    "parser",
    "transfer-syntax-registry",
    "object",
    "dictionary-std",
    "dictionary-builder",
    "dump",
    "ul",
    "scpproxy",
    "echoscu",
    "storescu",
    "pixeldata",
    "fromimage",
    "toimage",
    "storescp",
]

# optimize JPEG decoder to run tests faster
[profile.dev.package."jpeg-decoder"]
opt-level = 2

# optimize deflate to run tests faster
[profile.dev.package."deflate"]
opt-level = 2