[workspace]
members = [
    "devtools/dictionary-builder",
    "core",
    "dictionary-std",
    "encoding",
    "transfer-syntax-registry",
    "ul",
    "parser",
    "object",
    "json",
    "dump",
    "pixeldata",
    "parent",
    "echoscu",
    "findscu",
    "fromimage",
    "scpproxy",
    "storescp",
    "storescu",
    "toimage",
]

# use edition 2021 resolver
resolver = "2"

# optimize JPEG decoder to run tests faster
[profile.dev.package."jpeg-decoder"]
opt-level = 2

# optimize JPEG 2000 decoder to run tests faster
[profile.dev.package.jpeg2k]
opt-level = 2

# optimize flate2 to run tests faster
[profile.dev.package."flate2"]
opt-level = 2
