[package]
name = "dicom-app-common"
description = "Helper library for command-line applications in the DICOM-rs project"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>", "Nate Richman <naterichman@flywheel.io>"]
keywords = ["dicom", "cli"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.47", features = ["derive", "wrap_help"] }
rustls = "0.23.31"
rustls-native-certs = "0.8.1"
snafu = "0.8.9"
tracing = "0.1.41"
