[package]
name = "dicom-core"
version = "0.2.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "Efficient and practical core library for DICOM compliant systems"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
keywords = ["dicom"]
readme = "README.md"

[badges.travis-ci]
repository = "Enet4/dicom-rs"

[dependencies]
chrono = "0.4.6"
itertools = "0.9.0"
quick-error = "1.2.3"
smallvec = "1.0.0"
safe-transmute = "0.11.0"
num-traits = "0.2.12"
