[package]
name = "dicom-core"
version = "0.8.2"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "Efficient and practical core library for DICOM compliant systems"
edition = "2018"
rust-version = "1.72.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
keywords = ["dicom"]
readme = "README.md"

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["std", "clock"] }
either = "1.13.0"
itertools = "0.14"
num-traits = "0.2.12"
safe-transmute = "0.11.0"
smallvec = "1.6.1"
snafu = "0.8"
