[package]
name = "dcmdump"
version = "0.5.0-rc.1"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "(DEPRECATED) A CLI tool for inspecting DICOM files"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
categories = ["command-line-utilities"]
keywords = ["cli", "dicom", "dump"]
readme = "README.md"

[features]
default = ['dicom/inventory-registry', 'dicom/backtraces']

[dependencies]
dicom-dump = { path = "../dump", version = "0.5.0-rc.1" }
dicom = { path = "../parent/", version = "0.5.0-rc.1", default-features = false }
term_size = "0.3.2"
itertools = "0.10"
snafu = "0.7.0-beta.2"
colored = "2.0.0"
structopt = "0.3.21"
