[package]
name = "dicom-dictionary-builder"
version = "0.1.1"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "A generator of DICOM data dictionaries from standard documentation"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
categories = ["command-line-utilities"]
keywords = ["dicom"]
readme = "README.md"

[badges.travis-ci]
repository = "Enet4/dicom-rs"

[[bin]]
name = "dicom-dictionary-builder"
path = "src/main.rs"

[dependencies]
clap = "2.18.0"
futures = "~0.1.21"
hyper = "0.12.33"
quick-xml = "0.16.0"
regex = "1.0.0"
serde = { version = "1.0.55", features = ["derive"]}
serde_json = "1.0.17"
tokio-core = "0.1.10"
