[package]
name = "dicom-dictionary-std"
version = "0.5.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "Standard DICOM attribute dictionary"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
keywords = ["dicom", "dictionary"]
readme = "README.md"

[dependencies]
dicom-core = { path = "../core", version = "0.5.0" }
once_cell = "1.18.0"
