[package]
name = "dicom-dictionary-std"
version = "0.8.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "Standard DICOM attribute dictionary"
edition = "2018"
rust-version = "1.72.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
keywords = ["dicom", "dictionary"]
readme = "README.md"

[features]
default = []

# run-time deployed DICOM dictionaries
sop-class = []
meta-sop-class = []
transfer-syntax = []
well-known-sop-instance = []
dicom-uid-as-coding-scheme = []
coding-scheme = []
application-context-name = []
service-class = []
application-hosting-model = []
mapping-resource = []
ldap-oid = []
synchronization-frame-of-reference = []

[dependencies]
dicom-core = { path = "../core", version = "0.8.1" }
once_cell = "1.18.0"
