[package]
name = "dicom_dictionary_builder"
version = "0.1.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
license = "MIT/Apache-2.0"
publish = false
description = "A generator of DICOM data dictionaries in Rust code"

[[bin]]
name = "dictionary_builder"
path = "main.rs"

[dependencies]
xml-rs = "~0.3.4"
hyper = "~0.9.10"
regex = "~0.1.77"
