[package]
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "A generator of DICOM data dictionaries"
license = "MIT/Apache-2.0"
name = "dicom_dictionary_builder"
publish = false
version = "0.1.0"

[[bin]]
name = "dictionary_builder"
path = "main.rs"

[dependencies]
clap = "2.18.0"
futures = "0.1.16"
hyper = "0.11.6"
quick-xml = "0.9.4"
regex = "0.2.10"
tokio-core = "0.1.10"
