[package]
name = "dicom-dump"
version = "0.9.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "A CLI tool for inspecting DICOM files"
edition = "2018"
rust-version = "1.72.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
categories = ["command-line-utilities"]
keywords = ["cli", "dicom", "dump"]
readme = "README.md"

[lib]
name = "dicom_dump"
path = "src/lib.rs"

[[bin]]
name = "dicom-dump"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli", "sop-class"]
sop-class = ["dicom-dictionary-std/sop-class"]
cli = ["clap", "dicom-transfer-syntax-registry/inventory-registry"]

[dependencies]
snafu = "0.8"
clap = { version  = "4.0.18", features = ["derive"], optional = true }
dicom-core = { path = "../core", version = "0.9" }
dicom-encoding = { path = "../encoding", version = "0.9" }
dicom-json = { path = "../json", version = "0.9" }
dicom-object = { path = "../object/", version = "0.9" }
dicom-transfer-syntax-registry = { path = "../transfer-syntax-registry/", version = "0.9", default-features = false }
dicom-dictionary-std = { path = "../dictionary-std/", version = "0.9" }
owo-colors = { version = "4.0.0-rc.1", features = ["supports-colors"] }
serde_json = "1.0.108"
terminal_size = "0.4.0"
