[package]
name = "dicom-echoscu"
version = "0.2.1"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
description = "A DICOM C-ECHO command line interface"
categories = ["command-line-utilities"]
keywords = ["dicom"]
readme = "README.md"

[dependencies]
structopt = "0.3.21"
dicom-core = { path = "../core", version = "0.5.2" }
dicom-dictionary-std = { path = "../dictionary-std/", version = "0.5.0" }
dicom-object = { path = "../object/", version = "0.5.3" }
dicom-transfer-syntax-registry = { path = "../transfer-syntax-registry/", version = "0.5.1", default-features = false }
dicom-ul = { path = "../ul", version = "0.4.3" }
smallvec = "1.6.1"
snafu = "0.7.3"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
