[package]
name = "dicom-echoscu"
version = "0.8.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
description = "A DICOM C-ECHO command line interface"
categories = ["command-line-utilities"]
keywords = ["dicom"]
readme = "README.md"

[dependencies]
clap = { version  = "4.0.18", features = ["derive"] }
dicom-core = { path = "../core", version = "0.8.2" }
dicom-dictionary-std = { path = "../dictionary-std/", version = "0.8.1" }
dicom-dump = { version = "0.8.1", path = "../dump", default-features = false }
dicom-object = { path = "../object/", version = "0.8.2" }
dicom-transfer-syntax-registry = { path = "../transfer-syntax-registry/", version = "0.8.2", default-features = false }
dicom-ul = { path = "../ul", version = "0.8.2" }
snafu = "0.8"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
