[package]
name = "dicom-encoding"
version = "0.7.1"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "DICOM encoding and decoding primitives"
edition = "2018"
rust-version = "1.72.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
categories = ["encoding"]
keywords = ["dicom"]
readme = "README.md"

[dependencies]
dicom-core = { path = "../core", version = "0.8.0" }
dicom-dictionary-std = { path = "../dictionary-std", version = "0.7.0" }
encoding = "0.2.33"
byteordered = "0.6"
inventory = { version = "0.3.2", optional = true }
snafu = "0.8"

[features]
default = []
inventory-registry = ['inventory']
