[package]
name = "dicom-fromimage"
version = "0.1.2"
edition = "2018"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "A CLI tool for replacing the image content from DICOM files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
categories = ["command-line-utilities"]
keywords = ["cli", "dicom", "image", "image-conversion"]
readme = "README.md"

[features]
default = ['dicom-object/inventory-registry', 'dicom-object/backtraces']

[dependencies]
dicom-core = { path = "../core", version = "0.5.2" }
dicom-dictionary-std = { path = "../dictionary-std/", version = "0.5.0" }
dicom-object = { path = "../object/", version = "0.5.3" }
snafu = "0.7.3"
structopt = "0.3.23"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[dependencies.image]
version = "0.24.5"
default-features=false
features = ["jpeg", "png", "pnm", "tiff", "webp", "bmp", "jpeg_rayon"]
