[package]
name = "dicom-fromimage"
version = "0.2.2"
edition = "2018"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "A CLI tool for replacing the image content from DICOM files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
categories = ["command-line-utilities"]
keywords = ["cli", "dicom", "image", "image-conversion"]
readme = "README.md"

[features]
default = ['dicom-object/inventory-registry']

[dependencies]
clap = { version  = "4.0.18", features = ["derive"] }
dicom-core = { path = "../core", version = "0.6.3" }
dicom-dictionary-std = { path = "../dictionary-std/", version = "0.6.1" }
dicom-object = { path = "../object/", version = "0.6.3" }
snafu = "0.8"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[dependencies.image]
version = "0.24.5"
default-features=false
features = ["jpeg", "png", "pnm", "tiff", "webp", "bmp", "jpeg_rayon", "openexr"]
