[package]
name = "dicom-json"
version = "0.7.1"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
description = "DICOM data serialization to/from JSON"
keywords = ["dicom", "attributes", "json", "serialization"]
readme = "README.md"

[dependencies]
base64 = "0.22"
dicom-core = { version = "0.8.0", path = "../core" }
dicom-dictionary-std = { version = "0.7.0", path = "../dictionary-std" }
dicom-object = { version = "0.7.1", path = "../object" }
num-traits = "0.2.15"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["preserve_order"] }
tracing = "0.1.34"

[dev-dependencies]
dicom-test-files = "0.3"
pretty_assertions = "1.3.0"
