[package]
name = "dicom-json"
version = "0.9.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
description = "DICOM data serialization to/from JSON"
keywords = ["dicom", "attributes", "json", "serialization"]
readme = "README.md"

[dependencies]
base64 = "0.22"
dicom-core = { path = "../core", version = "0.9" }
dicom-dictionary-std = { path = "../dictionary-std", version = "0.9" }
dicom-object = { path = "../object", version = "0.9" }
num-traits = "0.2.15"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["preserve_order"] }
tracing = "0.1.34"

[dev-dependencies]
dicom-test-files = "0.3"
pretty_assertions = "1.3.0"
