[package]
name = "dicom-object"
version = "0.2.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
description = "A high-level API for reading and manipulating DICOM objects"
keywords = ["dicom", "object", "attributes"]
readme = "README.md"

[badges.travis-ci]
repository = "Enet4/dicom-rs"

[features]
default = []
inventory-registry = ['dicom-encoding/inventory-registry', 'dicom-transfer-syntax-registry/inventory-registry']
backtraces = ['snafu/backtraces']

[dependencies]
dicom-core = { path = "../core", version = "0.2.0" }
dicom-encoding = { path = "../encoding", version = "0.2.0" }
dicom-parser = { path = "../parser", version = "0.2.0" }
dicom-dictionary-std = { path = "../dictionary-std", version = "0.2.0" }
dicom-transfer-syntax-registry = { path = "../transfer-syntax-registry", version = "0.2.0" }
itertools = "0.9.0"
byteordered = "0.5.0"
smallvec = "1.0.0"
snafu = "0.6.8"

[dev-dependencies]
dicom-test-files = "0.2.0"
