[package]
name = "dicom-object"
version = "0.6.3"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
description = "A high-level API for reading and manipulating DICOM objects"
keywords = ["dicom", "object", "attributes"]
readme = "README.md"

[features]
default = []
inventory-registry = ['dicom-encoding/inventory-registry', 'dicom-transfer-syntax-registry/inventory-registry']

[dependencies]
dicom-core = { path = "../core", version = "0.6.3" }
dicom-encoding = { path = "../encoding", version = "0.6.1" }
dicom-parser = { path = "../parser", version = "0.6.0" }
dicom-dictionary-std = { path = "../dictionary-std", version = "0.6.1" }
dicom-transfer-syntax-registry = { path = "../transfer-syntax-registry", version = "0.6.2" }
itertools = "0.12"
byteordered = "0.6"
smallvec = "1.6.1"
snafu = "0.8"
tracing = "0.1.34"

[dev-dependencies]
tempfile = "3.2.0"
dicom-test-files = "0.2.1"
