[package]
name = "dicom"
version = "0.2.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "A pure Rust implementation of the DICOM standard"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"

[badges.travis-ci]
repository = "Enet4/dicom-rs"

[features]
default = ['inventory-registry']
inventory-registry = ['dicom-encoding/inventory-registry', 'dicom-transfer-syntax-registry/inventory-registry']
backtraces = ['dicom-object/backtraces']

[dependencies]
dicom-core = { path = "../core", version = "0.2.0" }
dicom-dictionary-std = { path = "../dictionary-std", version = "0.2.0" }
dicom-encoding = { path = "../encoding", version = "0.2.0" }
dicom-parser = { path = "../parser", version = "0.2.0" }
dicom-transfer-syntax-registry = { path = "../transfer-syntax-registry", version = "0.2.0" }
dicom-object = { path = "../object", version = "0.2.0", default-features = false }
