[package]
name = "dicom"
version = "0.5.4"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "A pure Rust implementation of the DICOM standard"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ['inventory-registry', 'ul', 'pixeldata']
inventory-registry = ['dicom-encoding/inventory-registry', 'dicom-transfer-syntax-registry/inventory-registry']
backtraces = ['dicom-object/backtraces']
ul = ['dicom-ul']
pixeldata = ['dicom-pixeldata']

[dependencies]
dicom-core = { path = "../core", version = "0.6.0" }
dicom-dictionary-std = { path = "../dictionary-std", version = "0.6.0" }
dicom-dump = { version = "0.5.4", path = "../dump", default-features = false }
dicom-encoding = { path = "../encoding", version = "0.6.0" }
dicom-parser = { path = "../parser", version = "0.5.3" }
dicom-transfer-syntax-registry = { path = "../transfer-syntax-registry", version = "0.5.1" }
dicom-object = { path = "../object", version = "0.5.4", default-features = false }
dicom-ul = { optional = true, path = "../ul", version = "0.4.4" }
dicom-pixeldata = { optional = true, path = "../pixeldata", version = "0.1.5" }
