[package]
name = "dicom-parser"
version = "0.5.0-rc.1"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "A middle-level parser and printer of DICOM data sets"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
categories = ["parser-implementations"]
keywords = ["dicom", "parser"]
readme = "README.md"

[dependencies]
dicom-core = { path = "../core", version = "0.5.0-rc.1" }
dicom-encoding = { path = "../encoding", version = "0.5.0-rc.1" }
chrono = "0.4.6"
dicom-dictionary-std = { path = "../dictionary-std/", version = "0.5.0-rc.1" }
smallvec = "1.6.1"
snafu = "0.7.0-beta.2"
