[package]
name = "dicom-parser"
version = "0.6.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "A middle-level parser and printer of DICOM data sets"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
categories = ["parser-implementations"]
keywords = ["dicom", "parser"]
readme = "README.md"

[dependencies]
dicom-core = { path = "../core", version = "0.6.3" }
dicom-encoding = { path = "../encoding", version = "0.6.1" }
chrono = { version = "0.4.22", default-features = false, features = ["std"] }
dicom-dictionary-std = { path = "../dictionary-std/", version = "0.6.1" }
smallvec = "1.6.1"
snafu = "0.8"
tracing = "0.1.34"
