[package]
name = "dicom-parser"
version = "0.9.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "A middle-level parser and printer of DICOM data sets"
edition = "2018"
rust-version = "1.72.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
categories = ["parser-implementations"]
keywords = ["dicom", "parser"]
readme = "README.md"

[dependencies]
dicom-core = { path = "../core", version = "0.9" }
dicom-encoding = { path = "../encoding", version = "0.9" }
dicom-dictionary-std = { path = "../dictionary-std/", version = "0.9" }
smallvec = "1.6.1"
snafu = "0.8"
tracing = "0.1.34"
