[package]
name = "dicom-pixeldata"
version = "0.1.5"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>", "Peter Evers <pevers90@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A high-level API for decoding DICOM objects into images and ndarrays"
repository = "https://github.com/Enet4/dicom-rs"
categories = ["multimedia::images"]
keywords = ["dicom"]
readme = "README.md"

[dependencies]
dicom-object = { path = "../object", version = "0.5.4" }
dicom-core = { path = "../core", version = "0.6.0" }
dicom-encoding = { path = "../encoding", version = "0.5.3" }
dicom-transfer-syntax-registry = { path = "../transfer-syntax-registry", version = "0.5.1" }
dicom-dictionary-std = { path = "../dictionary-std", version = "0.6.0" }
snafu = "0.7.3"
byteorder = "1.4.3"
gdcm-rs = { version = "0.5.0", optional = true }
rayon = { version = "1.5.0", optional = true }
ndarray = { version = "0.15.1", optional = true }
num-traits = "0.2.12"
tracing = "0.1.34"

[dependencies.image]
version = "0.24.5"
default-features = false
features = ["jpeg", "png", "pnm", "tiff", "webp", "bmp"]
optional = true

[dev-dependencies]
rstest = "0.16"
dicom-test-files = "0.2.1"

[features]
default = ["rayon", "native"]

ndarray = ["dep:ndarray"]
image = ["dep:image"]

native = ["dicom-transfer-syntax-registry/native"]
gdcm = ["gdcm-rs"]
rayon = ["dep:rayon", "image?/jpeg_rayon", "dicom-transfer-syntax-registry/rayon"]

[package.metadata.docs.rs]
features = ["image", "ndarray"]
