[package]
name = "dicom-pixeldata"
version = "0.2.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>", "Peter Evers <pevers90@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A high-level API for decoding DICOM objects into images and ndarrays"
repository = "https://github.com/Enet4/dicom-rs"
categories = ["multimedia::images"]
keywords = ["dicom"]
readme = "README.md"

[[bin]]
name = "dicom-transcode"
path = "src/bin/dicom-transcode.rs"
required-features = ["cli"]

[dependencies]
dicom-object = { path = "../object", version = "0.6.1" }
dicom-core = { path = "../core", version = "0.6.2" }
dicom-encoding = { path = "../encoding", version = "0.6.1" }
dicom-transfer-syntax-registry = { path = "../transfer-syntax-registry", version = "0.6.0" }
dicom-dictionary-std = { path = "../dictionary-std", version = "0.6.1" }
snafu = "0.7.3"
byteorder = "1.4.3"
gdcm-rs = { version = "0.5.0", optional = true }
rayon = { version = "1.5.0", optional = true }
ndarray = { version = "0.15.1", optional = true }
num-traits = "0.2.12"
tracing = "0.1.34"

[dependencies.image]
version = "0.24.5"
default-features = false
features = ["jpeg", "png", "pnm", "tiff", "webp", "bmp", "openexr"]
optional = true

[dependencies.clap]
version = "4.4.2"
optional = true
features = ["cargo", "derive"]

[dependencies.tracing-subscriber]
version = "0.3.17"
optional = true

[dev-dependencies]
rstest = "0.18.1"
dicom-test-files = "0.2.1"

[features]
default = ["rayon", "native"]

ndarray = ["dep:ndarray"]
image = ["dep:image"]

# Rust native image codec implementations
native = ["dicom-transfer-syntax-registry/native", "jpeg"]
# native JPEG codec implementation
jpeg = ["dicom-transfer-syntax-registry/jpeg"]
# native RLE lossless codec implementation
rle = ["dicom-transfer-syntax-registry/rle"]
# JPEG 2000 decoding via OpenJPEG static linking
openjpeg-sys = ["dicom-transfer-syntax-registry/openjpeg-sys"]

# replace pixel data decoding to use GDCM
gdcm = ["gdcm-rs"]
# use Rayon for image decoding
rayon = ["dep:rayon", "image?/jpeg_rayon", "dicom-transfer-syntax-registry/rayon"]

# enable command line tools
cli = ["dep:clap", "dep:tracing-subscriber"]

[package.metadata.docs.rs]
features = ["image", "ndarray"]
